--- a/URY.BAPS.Client.Protocol.V2/URY.BAPS.Client.Protocol.V2.csproj
+++ b/URY.BAPS.Client.Protocol.V2/URY.BAPS.Client.Protocol.V2.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>8</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\URY.BAPS.Client.Common\URY.BAPS.Client.Common.csproj" />
