--- a/URY.BAPS.Client.Common.Tests/URY.BAPS.Client.Common.Tests.csproj
+++ b/URY.BAPS.Client.Common.Tests/URY.BAPS.Client.Common.Tests.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <LangVersion>8</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.0" />
