--- a/URY.BAPS.Common.Model/URY.BAPS.Common.Model.csproj
+++ b/URY.BAPS.Common.Model/URY.BAPS.Common.Model.csproj
@@ -6,5 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
+    <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 </Project>
