--- a/URY.BAPS.Client.Wpf.Tests/URY.BAPS.Client.Wpf.Tests.csproj
+++ b/URY.BAPS.Client.Wpf.Tests/URY.BAPS.Client.Wpf.Tests.csproj
@@ -10,7 +10,7 @@
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+    <PackageReference Include="FontAwesome5" Version="1.0.14" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="Microsoft.CodeCoverage" Version="16.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
