--- a/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
+++ b/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
@@ -21,9 +21,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="autofac" Version="4.9.4" />
-    <PackageReference Include="FontAwesome5" Version="1.0.14" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="2.2.0" />
+    <PackageReference Include="FontAwesome5" Version="2.0.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Ini" Version="3.0.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
@@ -31,12 +31,12 @@
     <PackageReference Include="CalcBinding" Version="2.5.2" />
     <PackageReference Include="CommonServiceLocator" Version="2.0.4" />
     <PackageReference Include="DynamicExpresso.Core" Version="2.3.1" />
-    <PackageReference Include="gong-wpf-dragdrop" Version="2.0.5" />
+    <PackageReference Include="gong-wpf-dragdrop" Version="2.1.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="MvvmLight" Version="5.4.1.1" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="System.Reactive" Version="4.1.6" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0-preview5.19224.8" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
