--- a/URY.BAPS.Client.ViewModels/URY.BAPS.Client.ViewModel.csproj
+++ b/URY.BAPS.Client.ViewModels/URY.BAPS.Client.ViewModel.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\URY.BAPS.Client.Common\URY.BAPS.Client.Common.csproj" />
+    <ProjectReference Include="..\URY.BAPS.Client.Protocol.V2\URY.BAPS.Client.Protocol.V2.csproj" />
     <ProjectReference Include="..\URY.BAPS.Common.Model\URY.BAPS.Common.Model.csproj" />
   </ItemGroup>
 
