--- a/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
+++ b/URY.BAPS.Client.Wpf/URY.BAPS.Client.Wpf.csproj
@@ -46,7 +46,7 @@
     <ProjectReference Include="..\URY.BAPS.Client.Autofac\URY.BAPS.Client.Autofac.csproj" />
     <ProjectReference Include="..\URY.BAPS.Client.Protocol.V2\URY.BAPS.Client.Protocol.V2.csproj" />
     <ProjectReference Include="..\URY.BAPS.Client.Common\URY.BAPS.Client.Common.csproj" />
-    <ProjectReference Include="..\URY.BAPS.Client.ViewModels\URY.BAPS.Client.ViewModel.csproj" />
+    <ProjectReference Include="..\URY.BAPS.Client.ViewModel\URY.BAPS.Client.ViewModel.csproj" />
     <ProjectReference Include="..\URY.BAPS.Common.Model\URY.BAPS.Common.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
