--- a/URY.BAPS.Server.Protocol.V2/URY.BAPS.Server.Protocol.V2.csproj
+++ b/URY.BAPS.Server.Protocol.V2/URY.BAPS.Server.Protocol.V2.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\URY.BAPS.Common.Protocol.V2\URY.BAPS.Common.Protocol.V2.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Io" />
+    </ItemGroup>
+
 </Project>
