--- a/URY.BAPS.Client.Cli/URY.BAPS.Client.Cli.csproj
+++ b/URY.BAPS.Client.Cli/URY.BAPS.Client.Cli.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="LagDaemon.ReadLine" Version="2.0.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" />
   </ItemGroup>
 
